    listnewconfig now shows symbol values by default
  * debian/rules.real: Stop enabling verbose output for listnewconfig target
  * Documentation: typec.rst: Use literal-block element with ascii art
  * Documentation: Update references to drivers/base/firmware_class.c
  * [armhf] Enable MTD_NAND_MARVELL as module, replacing MTD_NAND_PXA3xx

 -- Ben Hutchings <ben@decadent.org.uk>  Thu, 19 Apr 2018 21:37:24 +0100

linux (4.16-1) UNRELEASED; urgency=medium

  [ Ben Hutchings ]
  * aufs: gen-patch: Fix Subject generation to skip SPDX-License-Identifier
  * aufs: Update support patchset to aufs4.16-20180409 (no functional change)
  * wireless: Add Debian wireless-regdb certificates (see #892229)
  * Add support for compilers installed outside the default PATH
  * linux-headers: Change linux-kbuild dependency to be versioned

  [ Vagrant Cascadian ]
  * [arm64] Add patches to support SATA on Tegra210/Jetson-TX1.

  [ James Clarke ]
  * [ia64] Drop nic-modules Depends overrides (fixes FTBFS)

  [ Vagrant Cascadian ]
  * [arm64] Enable features to support Pinebook and other A64 systems:
    CONFIG_USB_MUSB_HDRC, CONFIG_USB_MUSB_SUNXI, CONFIG_SUN8I_DE2_CCU,
    CONFIG_DMA_SUN6I
  * [arm64] Add patch enabling simplefb LCD on A64.

  [ Roger Shimizu ]
  * [armel] Add dependency of udeb modules (fixes FTBFS):
    - Add lzo_decompress to lzo-modules.
    - Add cmdlinepart to mtd-modules.
  * [armel] Add dependency of udeb packages (fixes FTBFS):
    - Add package dependency of mtd-modules to jffs2-modules.
    - Add package dependency of lzo-modules to squashfs-modules.

  [ Helge Deller ]
  * [hppa] Switch to self-decompressing kernel to save disk space in /boot

  [ Uwe Kleine-König ]
  * [amd64] enable AMD 10GbE Ethernet driver (CONFIG_AMD_XGBE=m)

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 08 Apr 2018 19:03:49 +0100

linux (4.16-1~exp1) experimental; urgency=medium

  * New upstream release: https://kernelnewbies.org/Linux_4.16

  [ Jeremy Stanley ]