@@ -28,7 +28,7 @@ Build-Depends-Arch:
 # used by upstream to build perf documentation
  asciidoc-base <!stage1 !nodoc !pkg.linux.notools>,
  xmlto <!stage1 !nodoc !pkg.linux.notools>,
-# used by upstream to build kconfig and perf
+# used by upstream to build genksyms, kconfig, and perf
  bison <!stage1>,
 # - flex needs to run on the host; we have the same problem as for openssl
  flex (>= 2.6.1-1.1~) <!stage1>,
