@@ -11,6 +11,7 @@ linux (4.17~rc1-1~exp1) UNRELEASED; urgency=medium
   * Documentation: typec.rst: Use literal-block element with ascii art
   * Documentation: Update references to drivers/base/firmware_class.c
   * [armhf] Enable MTD_NAND_MARVELL as module, replacing MTD_NAND_PXA3xx
+  * linux-kbuild: Update genksyms makefile to run flex and bison
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 19 Apr 2018 21:37:24 +0100
 
